# ChangeLog for Portage; the Gentoo Linux ports system 
# Copyright 2002 Gentoo Technologies, Inc.; Distributed under the GPL

  4 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :
  most emerge invocation options now have alternative short flags
  
  4 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :
  emerge now doesn't unmerge the last version of an installed version by
  default anymore, to really remove all instanced of packages the --all flag
  has to be used, the --safe flag is deprecated
  
  3 Feb 2002; G.Bevin <gbevin@gentoo.org> output.py, emerge,make.globals :
  all output can now be turned to black and white by using the functions in 
  output.py, this determines the mode by checking to NOCOLOR variable in
  make.conf or make.globals

  3 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :
  made it possible to run emerge --help and --search as non root

*portage 1.8.8-r1 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py, ebuild.sh, ebuild.5 :
  added support for a pkg_setup() function which is executed before anything
  else and can be typically used for package configuration actions or required
  system checks

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  implemented the noauto MAINTAINER flags for all relevant ebuild commands

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  make env-update disregard backup files
  
  1 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :
  added --pretend support instead of interactively asking to proceed,
  also added a delay before unmerging though to be sure

*portage 1.8.8 (1 Feb 2002)

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> emerge :
  added --safe switch to complement the --unmerge option

  1 Feb 2002; G.Bevin <gbevin@gentoo.org> portage.py :
  rewrote the packagename without category support to also graceously handle
  deps specifiers at the beginning, this shouldn't be used in the ebuilds, but
  are very handy when using emerge --unmerge
